--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,11 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2"
   },
-  "devDependencies": {},
   "description": ""
 }
